--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
 
   <nav class="top-bar">
-    <h1><a href="/">Resume</a></h1>
+    <h1><a href="/" class="title">Peter's Resume</a></h1>
 
     <section class="top-bar-section">
-      <ul class="right">
-        
+      <ul class="white">
+        <p><% link_to 'Back to Profile', root_path %></p>
       </ul>
     </section>
   </nav>
