--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   <nav class="top-bar">
     <h1><a href="/" class="title">Peter's Resume</a></h1>
 
-    <section class="top-bar-section">
+    <div class="top-bar-section">
       <ul class="white">
-        <p><% link_to 'Back to Profile', root_path %></p>
+        <p><%= link_to 'Back to Profile', root_path %></p>
       </ul>
-    </section>
+    </div>
   </nav>
 
   <%- flash.each do |key, value| -%>
