--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Galada&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 .title {
   font-family: 'Galada', cursive;
@@ -20,13 +22,21 @@
   padding-top: 2%;
 }
 
+.col-color{
+  background-color: red;
+}
+
 img {
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 80px;
   padding: 10px;
-  width: 75%;
+  width: 200px;
   display: block;
   margin: auto;
+}
+
+.text-1 {
+  font-family: 'Merriweather', serif;
 }
 
 .gray-box {
