--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
     <h1><a href="/" class="title">Peter's Resume</a></h1>
 
     <div class="top-bar-section">
-      <ul class="white">
-        <p><%= link_to 'Back to Profile', root_path %></p>
+      <ul class="white row">
+        <p class="padding"><%= link_to 'Back to Profile', root_path %></p>
+        <p class="padding"><%= link_to 'Job History', root_path %></p><br>
+        <p class="padding"><%= link_to 'Education', root_path %></p><br>
       </ul>
     </div>
   </nav>
