--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -42,14 +42,13 @@
 .left{
   float: left;
   text-align: center;
-  grid-row: 1;
-  grid-column: 1/2;
+  padding-left: 10%;
 }
 
 .right {
     overflow: hidden;
-    grid-row: 1;
-    grid-column: 2/2;
+    text-align: right;
+    padding-right: 10%;
 }
 
 .top {
