added github link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body class="background">
 
-  <nav class="top-bar">
+  <nav class="top-bar bottom">
     <h1><a href="/" class="title">Peter's Resume</a></h1>
 
     <div class="top-bar-section">
