--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,14 @@
 <body class="background">
 
   <nav class="top-bar bottom">
-    <h1><a href="/" class="title">Peter's Resume</a></h1>
+    <h1><a class="title">Peter McBride Stevens</a></h1>
 
     <div class="top-bar-section">
-      <ul class="white row">
-        <p class="padding"><%= link_to 'Back to Profile', root_path %></p>
-        <p class="padding"><%= link_to 'Job History', root_path %></p><br>
-        <p class="padding"><%= link_to 'Education', root_path %></p><br>
-      </ul>
+      <div class="white row">
+        <p class="col-3 title"><%= link_to 'Back to Profile', root_path %></p>
+        <p class="col-3 title"><%= link_to 'Job History', root_path %></p>
+        <p class="col-3 title"><%= link_to 'Education', root_path %></p>
+      </div>
     </div>
   </nav>
 
