--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -34,6 +34,36 @@
   padding-bottom: 2%;
 }
 
+.green-box{
+  background-color: #88C100;
+  border-radius: 5%;
+  font-family: 'Alegreya SC', serif;
+  color: white;
+  padding: 10%;
+  border: 10px solid white;
+  height: auto;
+}
+
+.yellow-box{
+  background-color: #FABE28;
+  border-radius: 5%;
+  font-family: 'Alegreya SC', serif;
+  color: white;
+  padding: 10%;
+  border: 10px solid white;
+  height: auto;
+}
+
+.orange-box{
+  background-color: #FF8A00;
+  border-radius: 5%;
+  font-family: 'Alegreya SC', serif;
+  color: white;
+  padding: 10%;
+  border: 10px solid white;
+  height: auto;
+}
+
 .borders {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
