--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -84,6 +84,10 @@ h1 {
   background-color: #F8A13F;
 }
 
+.pad{
+  padding-left: 2%;
+}
+
 .borders {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
