--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -31,6 +31,11 @@ h1 {
 .light{
   font-family: 'Roboto', sans-serif;
 }
+
+.white{
+  color: white;
+}
+
 .border{
   color: black;
   background: white;
@@ -43,9 +48,10 @@ h1 {
   border-radius: 6%;
   font-family: 'Alegreya SC', serif;
   color: white;
-  padding: 10%;
   border: 10px solid white;
-  height: 200px;
+  display: inline-block;
+  height: 125px;
+  padding: 10%;
 }
 
 .green-box:hover{
@@ -57,9 +63,10 @@ h1 {
   border-radius: 6%;
   font-family: 'Alegreya SC', serif;
   color: white;
-  padding: 10%;
   border: 10px solid white;
-  height: 200px;
+  display: inline-block;
+  height: 125px;
+  padding: 10%;
 }
 
 .yellow-box:hover {
@@ -71,13 +78,24 @@ h1 {
 }
 
 .orange-box{
+  align-items: center;
   background-color: #FF8A00;
   border-radius: 6%;
   font-family: 'Alegreya SC', serif;
   color: white;
-  padding: 10%;
   border: 10px solid white;
-  height: 200px;
+  display: inline-block;
+  height: 125px;
+  padding: 10%;
+}
+
+.orange{
+  background-color: #FF8A00;
+  color: white;
+}
+
+.orange-text{
+  color: #FF8A00;
 }
 
 .orange-box:hover{
@@ -86,6 +104,10 @@ h1 {
 
 .pad{
   padding-left: 2%;
+}
+
+.margin-top{
+  margin-top: 2%;
 }
 
 .borders {
@@ -107,6 +129,8 @@ h1 {
   overflow: hidden;
   box-shadow: 0 0 0 0 white;
 }
+
+
 
 .top {
   border-top-left-radius: 5px;
@@ -131,6 +155,10 @@ h1 {
 .aboutme {
   width: 200px;
   height: 50px;
+}
+
+.gap{
+  column-gap: normal;
 }
 
 .padding-top {
@@ -167,10 +195,6 @@ a {
   padding-top: 10px;
   text-align: center;
 }
-.western {
-  font-family: 'Ewert', cursive;
-  color: white;
-}
 
 .vr {
     width:10px;
@@ -192,9 +216,9 @@ hr {
 
 .spacing {
   padding-left: 5%;
-  padding-top: 5%;
+  padding-top: 2%;
   padding-right: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
 }
 
 .text-1 {
@@ -237,6 +261,7 @@ hr {
   display: flex;
 }
 
+
 .small-title {
   font-family: 'Galada', cursive;
   color: #EC4401;
@@ -263,11 +288,11 @@ img:hover {
 }
 
 .center{
+  text-align: center;
   left: center;
   right: center;
 }
 
 .mid{
-align-items: center;
-vertical-align: middle;
+text-align: center;
 }
