--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
     <div class="top-bar-section">
       <div class="white row">
-        <p class="col-3 title"><%= link_to 'Back to Profile', root_path %></p>
-        <p class="col-3 title"><%= link_to 'Job History', root_path %></p>
-        <p class="col-3 title"><%= link_to 'Education', root_path %></p>
+        <p class="col-3 title"><%= link_to image_tag("home.png"), root_path %></p>
+        <p class="col-3 title"><%= link_to image_tag("work.png"), root_path %></p>
+        <p class="col-3 title" value="school"><%= link_to image_tag("school.png"), root_path %></p>
       </div>
     </div>
   </nav>
