--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -97,6 +97,9 @@ h1 {
   height: 125px;
 }
 
+.no-bull{
+  list-style-type: armenian;
+}
 .yellow-box:hover {
   background-color: #F6D86B;
 }
@@ -104,7 +107,7 @@ h1 {
 .circles{
   spacing: 5%;
   padding: 1%;
-  border-radius: 360px;
+  border-radius: 25px;
   width: 300px;
   border: 5px solid #FABE28;
 }
