--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 
     <div class="top-bar-section">
       <div class="white row">
-        <p class="col-3 hover"><%= link_to image_tag("home.png"), root_path %></p>
-        <p class="col-3 hover"><%= link_to image_tag("work.png"), jobs_path %></p>
-        <p class="col-3 hover"><%= link_to image_tag("school.png"), education_path %></p>
-        <p class="col-3 hover"><%= link_to image_tag("projects.png"), projects_path %></p>
+        <p class="col-3 hover" title="Home"><%= link_to image_tag("home.png"), root_path %></p>
+        <p class="col-3 hover" title="Job History"><%= link_to image_tag("work.png"), jobs_path %></p>
+        <p class="col-3 hover" title="Education"><%= link_to image_tag("school.png"), education_path %></p>
+        <p class="col-3 hover" title="Projects"><%= link_to image_tag("projects.png"), projects_path %></p>
       </div>
     </div>
   </nav>
