--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body class="background">
 
   <nav class="top-bar bottom">
-    <h1><a class="my-logo"><%= image_tag("resume-logo.png")%></a></h1>
+    <h1><a class="title">Peter McBride Stevens</a></h1>
 
     <div class="top-bar-section">
       <div class="white row">
