--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -222,8 +222,21 @@ h1 {
   border: 5px solid #FABE28;
 }
 
+.gray{
+  color: #BCBCBC;
+}
+
 .circles-gr{
   width: 90%;
+}
+
+.gr-circ{
+  border-radius: 360px;
+  border: 5px solid #88C100;
+}
+
+.gr-circ:hover{
+  transform: scale(1.1)
 }
 
 .circles-gr1{
@@ -478,6 +491,22 @@ hr {
   display: flex;
 }
 
+.wrapper{
+  position: relative;
+  padding-top: 56.25%;
+}
+
+.player{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.react-video > div{
+  position: absolute;
+}
 
 .small-title {
   font-family: 'Galada', cursive;
