--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <nav class="top-bar bottom">
     <h1><a class="title">Peter McBride Stevens</a></h1>
 
-    <div class="top-bar-section">
-      <div class="white row">
+    <div class="top-bar-section center">
+      <div class="white row center">
         <p class="col-3 hover" title="Home"><%= link_to image_tag("home.png"), root_path %></p>
         <p class="col-3 hover" title="Job History"><%= link_to image_tag("work.png"), jobs_path %></p>
         <p class="col-3 hover" title="Education"><%= link_to image_tag("school.png"), education_path %></p>
