--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
-<body class="background">
+<body>
 
   <nav class="top-bar bottom">
     <h1><a class="title">Peter McBride Stevens</a></h1>
